Fix hashtag shuffle click on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,6 @@ body {
 }
 
 .list-group-item-action:focus, .list-group-item-action:hover {
-  z-index: 1;
   text-decoration: none;
   background-color: #f8f9fa;
 }
